# GDSC-8

./: .gitignore  CLAUDE.md  README.md  context.md  pyproject.toml  requirements.txt  syllabus.md
.claude/agents/: web-research-synthesizer.md
docs/: gdsc7-examples.md  tutorial-specifications.md
src/: utils.py
tests/: __init__.py  test_utils.py
tutorials/: GDCS8 context for llm.docx  GDSC API Documentation.md  GDSC8 LLM context.md  LLM best practices.ipynb  Tutorial_1_Account_setup.html  Tutorial_1_Account_setup.ipynb  Tutorial_2_Data_Exploration_and_First_API_Call.ipynb  Tutorial_3_AI_Agents.ipynb  Tutorial_3_Data_Exploration.ipynb  Tutorial_3_Your_First_Submission.ipynb  Tutorial_4_AI_Agents.ipynb  Tutorial_5_Improved_Agents.ipynb  Tutorial_6_LLM_Best_Practices .ipynb  Tutorial_6_LLM_Best_Practices.ipynb  skeleton_solution.ipynb
