[project]
name = "gdsc-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diagrams>=0.24.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.2.7",
    "strands-agents[mistral]>=1.8.0",
    "tqdm>=4.67.1",
]
